e2e/tests/all/snapshots/floating_window_open_desktop.snap
---
source: e2e/src/suite.rs
description: floating_window at desktop (open)
expression: tree
---
button "Inspector"
  StaticText "Inspector"
dialog "Inspector"
  group "Move window"
    heading "Inspector" [level=2]
      StaticText "Inspector"
  button "Window menu" [expanded=false] [haspopup=menu]
  button "Close"
  paragraph
    StaticText "Drag the title bar, or focus it and use the arrow keys."
  button "Done"
    StaticText "Done"
  separator "Resize window" = 378 [valuemax=480] [valuemin=240]
