e2e/tests/all/snapshots/floating_window_rest_mobile.snap
---
source: e2e/src/suite.rs
description: floating_window at mobile (rest)
expression: tree
---
button "Inspector"
  StaticText "Inspector"
generic
generic
