e2e/tests/all/snapshots/focus_trap_open_desktop.snap
---
source: e2e/src/suite.rs
description: focus_trap at desktop (open)
expression: tree
---
button "Rename file"
  StaticText "Rename file"
dialog "Rename" [modal]
  heading "Rename" [level=2]
    StaticText "Rename"
  button "Close"
  paragraph
    StaticText "Pick a new name."
  button "Keep"
    StaticText "Keep"
  button "Rename"
    StaticText "Rename"
