e2e/tests/all/snapshots/focus_trap_rest_desktop.snap
---
source: e2e/src/suite.rs
description: focus_trap at desktop (rest)
expression: tree
---
generic
  button "Rename file"
    StaticText "Rename file"
    generic
