e2e/tests/all/snapshots/focus_trap_rest_mobile.snap
---
source: e2e/src/suite.rs
description: focus_trap at mobile (rest)
expression: tree
---
generic
  button "Rename file"
    StaticText "Rename file"
    generic
