e2e/tests/all/snapshots/gradient_rest_mobile.snap
---
source: e2e/src/suite.rs
description: gradient at mobile (rest)
expression: tree
---
button "Theme"
  StaticText "Theme"
button "Override"
  StaticText "Override"
button "Color"
  StaticText "Color"
button "Selected" [pressed]
  StaticText "Selected"
button "Filled"
  StaticText "Filled"
button "Star"
  StaticText "★"
StaticText "NEW"
image "Verified"
  StaticText "✓"
paragraph
  StaticText "On the theme's gradient."
button "More"
  StaticText "More"
paragraph
  StaticText "Glass over a gradient."
paragraph
  StaticText "Gradient text"
paragraph
  StaticText "Plain coloured text"
banner
  button "Menu"
    StaticText "Menu"
paragraph
  StaticText "On an info fill."
button "More"
  StaticText "More"
paragraph
  StaticText "On a literal fill."
paragraph
  StaticText "A glass tint."
banner
  StaticText "Tinted"
paragraph
  StaticText "From error to info."
